--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^15.0.2",
     "@angular/router": "^15.0.2",
     "rxjs": "^7.5.7",
+    "scss": "^0.2.4",
     "tslib": "^2.4.1",
     "zone.js": "^0.12.0"
   },
